# fcore

./: .travis.yml  CMakeLists.txt  README.md  fcoreConfig.cmake.in
doc/: Doxyfile
doc/html/: annotated.html  annotated_dup.js  classes.html  collections_8f90_source.html  collections__data_8f90_source.html  collections__dictionary_8f90_source.html  collections__hash_8f90_source.html  collections__linked__list_8f90_source.html  collections__list_8f90_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  fcore__constants_8f90_source.html  file__io_8f90_source.html  file__io__binary_8f90_source.html  file__io__endian_8f90_source.html  file__io__fm_8f90_source.html  file__io__path_8f90_source.html  file__io__reader_8f90_source.html  file__io__text_8f90_source.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_10.dot  inherit_graph_11.dot  inherit_graph_12.dot  inherit_graph_14.dot  inherit_graph_15.dot  inherit_graph_16.dot  inherit_graph_17.dot  inherit_graph_18.dot  inherit_graph_2.dot  inherit_graph_20.dot  inherit_graph_21.dot  (+248 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_2.js  (+29 more)
examples/: CMakeLists.txt  folder_ops_example.f90  strings_example.f90  text_io_example.f90  ui_dialog_example.f90
include/: regular_expressions.h  system_file_io.h  ui_dialogs.h
src/: CMakeLists.txt  collections.f90  collections_data.f90  collections_dictionary.f90  collections_hash.f90  collections_linked_list.f90  collections_list.f90  csv.f90  csv_column.f90  fcore_constants.f90  file_io.f90  file_io_binary.f90  file_io_endian.f90  file_io_fm.f90  file_io_path.f90  file_io_reader.f90  file_io_text.f90  regular_expressions.cpp  regular_expressions.f90  strings.f90  strings_ops.f90  strings_string_builder.f90  system_file_io.cpp  ui_dialogs.cpp  ui_dialogs.f90
tests/: CMakeLists.txt  test_fcore.f90  test_fcore_binary_io.f90  test_fcore_dictionary.f90  test_fcore_list.f90  test_fcore_regex.f90  test_fcore_strings.f90  test_fcore_text_io.f90
